--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,28 +7,8 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: name-tests-test
-  - repo: https://github.com/myint/autoflake
-    rev: v1.4
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.252
     hooks:
-      - id: autoflake
-        exclude: .*/__init__.py
-        args:
-          - --in-place
-          - --remove-all-unused-imports
-          - --expand-star-imports
-          - --remove-duplicate-keys
-          - --remove-unused-variables
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.4.2
-    hooks:
-      - id: isort
-        args: ["--profile", "black"]
-  - repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.4.0
-    hooks:
-      - id: add-trailing-comma
-        args: [--py36-plus]
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v2.0.1
-    hooks:
-      - id: autopep8
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix, --ignore, "E501"]
