--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 django = "^4.1.7"
 aiogram = "^2.25.1"
 python-dotenv = "^1.0.0"
+pillow = "^9.4.0"
+psycopg2-binary = "^2.9.5"
 
 
 [tool.poetry.group.dev.dependencies]
