--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ aiogram = "^2.25.1"
 python-dotenv = "^1.0.0"
 pillow = "^9.4.0"
 psycopg2-binary = "^2.9.5"
+uvicorn = "^0.20.0"
 
 
 [tool.poetry.group.dev.dependencies]
