refactor: Rename bot.py to start_bot.py and add Django setup code
Renamed the file bot.py to start_bot.py to follow a more descriptive naming convention. Also added code to set up Django to enable Django ORM usage. The bot's dependencies are imported and initialized, handlers and dispatcher settings are registered, and the bot is started using the executor.start_polling() method.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,4 +11,4 @@ repos:
     rev: v0.0.252
     hooks:
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix, --ignore, "E501"]
+        args: [--fix, --exit-non-zero-on-fix, --ignore, "E501,E402"]
