--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 pillow = "^9.4.0"
 psycopg2-binary = "^2.9.5"
 uvicorn = "^0.20.0"
+yookassa = "^2.3.5"
 
 
 [tool.poetry.group.dev.dependencies]
