--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pillow = "^9.4.0"
 psycopg2-binary = "^2.9.5"
 uvicorn = "^0.20.0"
 yookassa = "^2.3.5"
+openpyxl = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
