fix: env variables

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -58,6 +58,5 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
             cd bottec_test
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker image prune -af
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker volume prune -f --filter "label!=todolist_postgres_data"
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose down -d
             echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose up -d
