--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,13 +1,6 @@
 version: "3.8"
 
-x-db-variables: &db-variables
-  POSTGRES_DB: $POSTGRES_DB
-  POSTGRES_USER: $POSTGRES_USER
-  POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-  POSTGRES_SERVER: $POSTGRES_SERVER
-
 x-common-variables: &common-variables
-  <<: *db-variables
   DB_PORT: $DB_PORT
   SECRET_KEY: $SECRET_KEY
   ALLOWED_HOSTS: $ALLOWED_HOSTS
@@ -15,7 +8,10 @@ x-common-variables: &common-variables
   SECRET_KEY_YOOKASSA: $SECRET_KEY_YOOKASSA
   SHOP_ID_YOOKASSA: $SHOP_ID_YOOKASSA
   REDIRECT_URL: $REDIRECT_URL
-
+  POSTGRES_DB: $POSTGRES_DB
+  POSTGRES_USER: $POSTGRES_USER
+  POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+  POSTGRES_SERVER: $POSTGRES_SERVER
 
 services:
   web:
@@ -42,7 +38,7 @@ services:
   db:
     image: postgres:latest
     environment:
-      <<: *db-variables
+      <<: *common-variables
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
