--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,6 +1,10 @@
 version: "3.8"
 
 x-common-variables: &common-variables
+  POSTGRES_DB: $POSTGRES_DB
+  POSTGRES_USER: $POSTGRES_USER
+  POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+  POSTGRES_SERVER: $POSTGRES_SERVER
   DB_PORT: $DB_PORT
   SECRET_KEY: $SECRET_KEY
   ALLOWED_HOSTS: $ALLOWED_HOSTS
@@ -8,16 +12,13 @@ x-common-variables: &common-variables
   SECRET_KEY_YOOKASSA: $SECRET_KEY_YOOKASSA
   SHOP_ID_YOOKASSA: $SHOP_ID_YOOKASSA
   REDIRECT_URL: $REDIRECT_URL
-  POSTGRES_DB: $POSTGRES_DB
-  POSTGRES_USER: $POSTGRES_USER
-  POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-  POSTGRES_SERVER: $POSTGRES_SERVER
+
 
 services:
   web:
     image: gmoroz/bottec_test:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     environment:
-      <<: *common-variables
+      *common-variables
     entrypoint: ["sh", "entrypoint.sh"]
     ports:
       - 80:80
@@ -31,14 +32,14 @@ services:
     image: gmoroz/bottec_test:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     command: ["python", "/code/start_bot.py"]
     environment:
-      <<: *common-variables
+      *common-variables
     depends_on:
       - web
 
   db:
     image: postgres:latest
     environment:
-      <<: *common-variables
+      *common-variables
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
